--- a/project/src/main/res/layout/fragment_itinerary_list.xml
+++ b/project/src/main/res/layout/fragment_itinerary_list.xml
@@ -69,8 +69,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/no_upcoming_trips"
                     android:textColor="@color/itin_offwhite_text"
-                    android:textSize="24sp"
-                    app:textStyle="normal" />
+                    android:textSize="18sp"
+                    app:textStyle="light" />
 
                 <Button
                     android:id="@+id/login_button"
@@ -104,13 +104,13 @@
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/or_enter_itin_number_tv"
+                style="@style/Widget.BorderlessButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 android:contentDescription="@string/enter_itinerary_number"
-                android:drawableLeft="@drawable/ic_enter_itin_number"
                 android:drawablePadding="8dp"
                 android:gravity="center_vertical"
                 android:padding="16dp"
