--- a/project/src/main/res/values-v21/styles_cars.xml
+++ b/project/src/main/res/values-v21/styles_cars.xml
@@ -20,10 +20,10 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingLeft">12dp</item>
-        <item name="android:paddingRight">12dp</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:paddingRight">15dp</item>
     </style>
 
     <style name="Theme.AlertDialog" parent="android:Theme.Material.Light.Dialog.Alert">
