--- a/project/src/samsung/res/values/donottranslate.xml
+++ b/project/src/samsung/res/values/donottranslate.xml
@@ -4,4 +4,11 @@
 
     <!-- The merchant name to display to the user for Google Wallet -->
     <string name="merchant_name">Samsung</string>
+
+    <!-- App Support URL -->
+    <string name="app_support_url">http://www.mobiata.com/support/expedia/samsung</string>
+
+    <!-- Email addresses -->
+    <string name="email_app_support">Expedia-Samsung@mobiata.com</string>
+
 </resources>
