--- a/project/src/wotif/res/values/colors.xml
+++ b/project/src/wotif/res/values/colors.xml
@@ -67,4 +67,9 @@
     <color name="lx_secondary_color_disabled_wotif">#599027</color>
     <color name="lx_unchecked_toggle_text_color_wotif">@android:color/white</color>
 
+    <!--Account Lib Colors -->
+    <color name="acct__btn_sign_in_text_wotif">#FFFFFF</color>
+    <color name="acct__bg_input_text_error_wotif">#FFFFFF</color>
+    <color name="acct__bg_input_text_good_wotif">#EEEEEE</color>
+
 </resources>
