--- a/project/src/main/res/layout/hotel_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/hotel_checkout_summary_widget.xml
@@ -1,55 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/hotel_room_background"
-        android:layout_width="match_parent"
-        android:layout_height="120dp" />
+    android:layout_height="wrap_content" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_alignBottom="@+id/hotel_room_background"
-        android:layout_alignLeft="@+id/hotel_room_background"
-        android:layout_alignRight="@+id/hotel_room_background"
-        android:layout_alignTop="@+id/hotel_room_background"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="@color/placeholder_background_color"
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/hotel_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#FFF"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/check_in_out_dates"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#FFF"/>
 
         <TextView
             android:id="@+id/address_line_one"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingTop="12dp"
+            android:textColor="#FFF"/>
 
         <TextView
             android:id="@+id/address_city_state"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#FFF"/>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/hotel_booking_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/hotel_room_background"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="12dp">
 
         <TextView
             android:id="@+id/selected_room"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/cars_actionbar_text_color" />
+            android:textColor="@color/cars_actionbar_text_color"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/selected_bed"
@@ -61,13 +66,19 @@
             android:id="@+id/number_nights"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/cars_actionbar_text_color" />
+            android:drawableLeft="@drawable/ic_calendar_small"
+            android:drawablePadding="8dp"
+            android:paddingTop="12dp"
+            android:textColor="@color/cars_actionbar_text_color"/>
 
         <TextView
             android:id="@+id/number_guests"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/cars_actionbar_text_color" />
+            android:drawableLeft="@drawable/ic_guest_small"
+            android:drawablePadding="8dp"
+            android:paddingBottom="12dp"
+            android:textColor="@color/cars_actionbar_text_color"/>
 
         <TextView
             android:id="@+id/free_cancellation_text"
@@ -75,7 +86,7 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/check"
             android:drawablePadding="8dp"
-            android:paddingLeft="14dp"
+            android:text="@string/free_cancellation"
             android:textColor="@color/cars_actionbar_text_color" />
 
         <TextView
@@ -84,7 +95,6 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/check"
             android:drawablePadding="8dp"
-            android:paddingLeft="14dp"
             android:textColor="@color/cars_actionbar_text_color" />
 
         <TextView
@@ -93,15 +103,21 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/check"
             android:drawablePadding="8dp"
-            android:paddingLeft="14dp"
+            android:text="@string/best_price_guarantee"
             android:textColor="@color/cars_actionbar_text_color" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/cars_actionbar_text_color"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/hotel_booking_summary"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="12dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -111,17 +127,23 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/cars_actionbar_text_color" />
+                android:text="@string/total_with_tax"
+                android:textColor="@color/cars_actionbar_text_color"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/fees_paid_at_hotel"
                 android:textColor="@color/cars_actionbar_text_color" />
 
             <TextView
+                android:id="@+id/amount_due_today_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/cars_actionbar_text_color" />
+                android:textColor="@color/cars_actionbar_text_color"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
@@ -132,22 +154,28 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/total_price_with_tax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:textColor="@color/cars_actionbar_text_color"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/total_fees"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:textColor="@color/cars_actionbar_text_color" />
 
             <TextView
+                android:id="@+id/total_price_with_tax_and_fees"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:textColor="@color/cars_actionbar_text_color" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:textColor="@color/cars_actionbar_text_color" />
+                android:textColor="@color/hotels_primary_color"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
