--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -172,7 +172,7 @@
                     android:fillViewport="true">
 
                     <TableLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <com.expedia.bookings.widget.TextView
@@ -181,7 +181,6 @@
                             android:layout_marginBottom="3dp"
                             android:layout_marginLeft="12dp"
                             android:layout_marginTop="3dp"
-                            android:text="@string/AmenityNone"
                             android:textSize="16dp" />
 
                         <TableRow
