--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -86,14 +86,14 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp">
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp">
 
                     <TextView
                         android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Price"
+                        android:text="@string/price"
                         android:textColor="@color/hotels_primary_color" />
 
                     <LinearLayout
@@ -106,23 +106,20 @@
                         android:id="@+id/star_rating_bar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="20dp"
-                        android:text="Star Rating"
+                        android:paddingTop="15dp"
+                        android:text="@string/star_rating"
                         android:textColor="@color/hotels_primary_color" />
-
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginTop="20dp">
+                        android:layout_marginTop="15dp"
+                        android:fillViewport="true">
 
                         <android.support.v7.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:layout_marginTop="10dp"
                             app:cardCornerRadius="3dp"
                             app:cardElevation="1dp">
 
@@ -131,70 +128,75 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
 
-                                <Button
+                                <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_one"
+                                    style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="1 star"
-                                    android:layout_weight="1"
-                                    android:textColor="@color/hotels_primary_color"
-                                    android:background="?android:attr/selectableItemBackground" />
+                                    android:padding="10dp"
+                                    android:numStars="5"
+                                    android:stepSize="0.5"
+                                    android:layout_weight="1" />
 
                                 <View
                                     android:layout_width="1px"
                                     android:layout_height="match_parent"
                                     android:background="@color/divider_grey" />
 
-                                <Button
+                                <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_two"
+                                    style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="2 star"
-                                    android:layout_weight="1"
-                                    android:textColor="@color/hotels_primary_color"
-                                    android:background="?android:attr/selectableItemBackground" />
+                                    android:padding="10dp"
+                                    android:numStars="5"
+                                    android:stepSize="0.5"
+                                    android:layout_weight="1" />
 
                                 <View
                                     android:layout_width="1px"
                                     android:layout_height="match_parent"
                                     android:background="@color/divider_grey" />
 
-                                <Button
+                                <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_three"
+                                    style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="3 star"
-                                    android:layout_weight="1"
-                                    android:textColor="@color/hotels_primary_color"
-                                    android:background="?android:attr/selectableItemBackground" />
+                                    android:padding="10dp"
+                                    android:numStars="5"
+                                    android:stepSize="0.5"
+                                    android:layout_weight="1" />
 
                                 <View
                                     android:layout_width="1px"
                                     android:layout_height="match_parent"
                                     android:background="@color/divider_grey" />
 
-                                <Button
+                                <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_four"
+                                    style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="4 star"
-                                    android:layout_weight="1"
-                                    android:textColor="@color/hotels_primary_color"
-                                    android:background="?android:attr/selectableItemBackground" />
+                                    android:padding="10dp"
+                                    android:numStars="5"
+                                    android:stepSize="0.5"
+                                    android:layout_weight="1" />
 
                                 <View
                                     android:layout_width="1px"
                                     android:layout_height="match_parent"
                                     android:background="@color/divider_grey" />
 
-                                <Button
+                                <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_five"
+                                    style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="5 star"
-                                    android:layout_weight="1"
-                                    android:textColor="@color/hotels_primary_color"
-                                    android:background="?android:attr/selectableItemBackground" />
+                                    android:padding="10dp"
+                                    android:numStars="5"
+                                    android:stepSize="0.5"
+                                    android:layout_weight="1" />
 
                             </LinearLayout>
                         </android.support.v7.widget.CardView>
@@ -204,8 +206,8 @@
                         android:id="@+id/vip_badge"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="20dp"
-                        android:text="+VIP"
+                        android:paddingTop="15dp"
+                        android:text="@string/plus_vip"
                         android:textColor="@color/hotels_primary_color" />
 
                     <RelativeLayout
@@ -233,16 +235,13 @@
                         android:id="@+id/amenities_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="20dp"
-                        android:text="Amenities"
+                        android:paddingTop="15dp"
+                        android:text="@string/amenities"
                         android:textColor="@color/hotels_primary_color" />
 
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="10dp"
                         app:cardCornerRadius="3dp"
                         app:cardElevation="1dp">
 
@@ -250,7 +249,8 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:padding="10dp">
 
                             <Button
                                 android:id="@+id/filter_accessible"
@@ -258,7 +258,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:background="@android:color/transparent"
-                                android:text="Accessible"
+                                android:text="@string/accessible"
                                 android:textColor="@color/hotels_primary_color" />
 
                             <Button
@@ -267,7 +267,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:background="@android:color/transparent"
-                                android:text="Business Center"
+                                android:text="@string/business_center"
                                 android:textColor="@color/hotels_primary_color" />
 
                             <Button
@@ -276,7 +276,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:background="@android:color/transparent"
-                                android:text="Room Service"
+                                android:text="@string/room_service"
                                 android:textColor="@color/hotels_primary_color" />
 
                             <Button
@@ -285,7 +285,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:background="@android:color/transparent"
-                                android:text="Gym"
+                                android:text="@string/gym"
                                 android:textColor="@color/hotels_primary_color" />
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
@@ -304,7 +304,7 @@
                             android:layout_weight="1"
                             android:background="@android:color/transparent"
                             android:gravity="center_horizontal"
-                            android:text="Accessible"
+                            android:text="@string/accessible"
                             android:textColor="@color/hotels_primary_color" />
 
                         <TextView
@@ -314,7 +314,7 @@
                             android:layout_weight="1"
                             android:background="@android:color/transparent"
                             android:gravity="center_horizontal"
-                            android:text="Business Center"
+                            android:text="@string/business_center"
                             android:textColor="@color/hotels_primary_color" />
 
                         <TextView
@@ -324,7 +324,7 @@
                             android:layout_weight="1"
                             android:background="@android:color/transparent"
                             android:gravity="center_horizontal"
-                            android:text="Room Service"
+                            android:text="@string/room_service"
                             android:textColor="@color/hotels_primary_color" />
 
                         <TextView
@@ -334,7 +334,7 @@
                             android:layout_weight="1"
                             android:background="@android:color/transparent"
                             android:gravity="center_horizontal"
-                            android:text="Gym"
+                            android:text="@string/gym"
                             android:textColor="@color/hotels_primary_color" />
                     </LinearLayout>
 
@@ -343,7 +343,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="20dp"
-                        android:text="Neighborhoods"
+                        android:text="@string/neighborhoods"
                         android:textColor="@color/hotels_primary_color" />
 
                 </LinearLayout>
